# Dev-portal

./: README.md
.github/workflows/: backend_ci_cd.yml
Helm/dev-portal/: values.yaml
Helm/dev-portal/templates/: backend-configmap.yaml  backend-deployment.yaml
backend/: .gitignore  Dockerfile  README.MD  config.default.yaml  pyproject.toml  scripts.py
backend/app/: config.py  exceptions.py  main.py
backend/app/dependencies/: http_client.py  jwt_token.py
backend/app/models/: access_token.py  apisix.py  vault.py
backend/app/routers/: apikey.py
backend/app/services/: apisix.py  vault.py
backend/app/utils/: uuid.py
backend/src/main/java/com/apiportal/backend/apisix/: ApisixRestClient.java
backend/src/main/java/com/apiportal/backend/controller/: ApikeyController.java
backend/src/main/java/com/apiportal/backend/infra/security/: AccessToken.java
backend/src/main/java/com/apiportal/backend/infra/security/config/: JwtAuthentication.java  SecurityConfig.java
backend/src/main/java/com/apiportal/backend/models/: UserDTO.java
backend/src/main/java/com/apiportal/backend/service/: VaultService.java
backend/tests/: conftest.py
backend/tests/data/: apisix.py  keycloak.py  realm-export.json
backend/tests/routers/: apikey_test.py
backend/tests/services/: apisix_test.py  vault_test.py
ui/: README.md
ui/src/: App.js
ui/src/Services/: KeyService.js
